@@ -147,6 +147,12 @@ to first switch tasksel to that DE using the following command, e.g:
 <!-- version of X11 shipping with the current release -->
 <!ENTITY x11ver "7.3">
 
+<!-- version of BRLTTY shipping with the current release -->
+<!ENTITY brlttyver "3.10">
+
+<!-- version of Speakup shipping with the current release -->
+<!ENTITY speakupver "3.0.3">
+
 <!-- an example of adding another image to lilo.conf, cf
      en/post-install.sgml etc. -->
 <!ENTITY additional-lilo-image
