@@ -44,6 +44,7 @@ For information on how to boot the graphical installer, see
 
  </sect1>
 
+&boot-installer-accessibility.xml;
 &boot-installer-parameters.xml;
 &boot-installer-trouble.xml;
 
