@@ -399,6 +399,7 @@ system.
   </sect2>
 
 &network-cards.xml;
+&accessibility-hardware.xml;
 &supported-peripherals.xml;
 
  </sect1>
